org.mmisw.ont - Ontology URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-14  0.2.0.beta (20081114)
	
	- Issue 53: unversioned reponse wrong for "slash" ontologies 
	UnversionedConverter: Using JenaUtil2 to handle the fragments as in OntMd
	(TODO JenaUtil2.java is a copy of the same file on ontmd -> unify in a libray)
	
	
	- Deprecating MdDispatcher - MD display no longer done here (use ontmd instead)
	TODO: See if MdHelper can also be deprecated/removed when doing code clean-up
	
	
2008-11-13  0.2.0.beta (20081113)
	- preliminary tests of unversioned response seem OK
	  Issue 24, part 2): http://code.google.com/p/mmisw/issues/detail?id=24
	  
	  
2008-11-12
	- Starting "unversioned" version request dispatch
	
	
	
2008-11-11   (Happy B-day Ini!)
	- MmiUri.LATEST_VERSION_INDICATOR = "$"
	
	- Issue 27: URIs have # signs instead of / before terms:
		All URIs starting with http://mmisw.org/ont/ will get the "#" (if any) 
		replaced by "/".   I think this works pretty well, I mean, not only as a 
		temporary solution, but also that it won't hurt once the submitted ontologies
		get the namespace with the "/" fragment separator.
	

2008-11-10
	- Rule added: (a.2) an OWL document if is the user-agent is "Java/*"
		This is a workaround for the following situation in VINE:
		The underlying Jena library should include the accept element:
		"application/rdf+xml" but it's not doing so, see bug:
		   Wrong Accept-Header in HTTP-Connections - ID: 1424091
		   http://sourceforge.net/tracker2/?func=detail&aid=1424091&group_id=40417&atid=430288
	
	
2008-11-04
	Re. 24: unversioned and latest-version requests
		- Accept dash ('-') as a valid version in an ontology URI request.
		- The dash requst is handled with a "redirect" to the actual latest version
		- the "unversioned" request is still handled as usual: it simple returns the
		  contents of the latest version without any modification.
	
	
2008-11-03
	- _getFullPath: try with or without ".owl" extension
	
2008-11-02